# toydb-mimic

./: Cargo.toml
src/: error.rs  lib.rs
src/encoding/: keycode.rs
src/storage/: bitcask.rs  engine.rs  memory.rs
