[package]
name = "toydb-mimic"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
config = "0.15.19"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
hdrhistogram = "7.5.4"
itertools = "0.14.0"
log = "0.4.28"
rand = "0.9.2"
regex = "1.12.2"
rustyline = "17.0.2"
serde = { version = "1.0.228", features=["derive"]}
